# road_segmentation

./: .gitignore  Dockerfile  README.md  init_vast.sh  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_mamba.txt
.devcontainer/: devcontainer.json
notebooks/: road_segformer.ipynb  segformer_ae.ipynb  segmentation_imputation.ipynb
road_segmentation/: __init__.py
road_segmentation/cli/: auto_encoder_cli.py  entrypoint.py  imputation_dataset_creation_cli.py  segformer_cli.py  segment_imputation_cli.py  umamba_cli.py  unet_cli.py  unet_pretrained_cli.py  unet_simple_cli.py
road_segmentation/dataset/: auto_encoder_dataset.py  chesa_cil_dataset.py  chesa_dataset.py  deepglobe_cil_dataset.py  deepglobe_dataset.py  epfl_cil_dataset.py  epfl_dataset.py  ethz_cil_dataset.py  mass_dataset.py  merged_datasets.py  segmentation_datapoint.py
road_segmentation/model/: auto_encoder.py  auto_encoder_2.py  road_segformer.py  seg_imputator.py  umamba.py  unet.py  unet_denoising.py  unet_pretrained.py  unet_simple.py
road_segmentation/model/impl/: prep_session_unet.py  swish.py  umamba_bot_2d.py  umamba_loss.py  ws_conv.py
road_segmentation/utils/: prediction_callback.py  prediction_writer.py  prediction_writer_pl.py  prep_deepglobe_dataset.py  prep_mass_dataset.py  transforms.py
